// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditFilterListHeader renders the header when creating a new filter list with ID, description and items set 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiFlexGroup
        alignItems="baseline"
        component="div"
        direction="row"
        gutterSize="m"
        justifyContent="flexStart"
        responsive={false}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiTitle
            size="m"
            textTransform="none"
          >
            <h1>
              Create new filter list
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <p>
              15
               
              items
               in total
            </p>
          </EuiTextColor>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText="Use lowercase alphanumerics (a-z and 0-9), hyphens or underscores; must start and end with an alphanumeric character"
    isInvalid={false}
    label="Filter list ID"
  >
    <EuiFieldText
      compressed={false}
      fullWidth={false}
      isInvalid={false}
      isLoading={false}
      name="new_filter_id"
      onChange={[Function]}
      value="test_filter_list"
    />
  </EuiFormRow>
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="s"
    justifyContent="flexStart"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <p>
          A test filter list
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EditDescriptionPopover
        canCreateFilter={true}
        description="A test filter list"
        updateDescription={[MockFunction]}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
</React.Fragment>
`;

exports[`EditFilterListHeader renders the header when creating a new filter list with the ID not set 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiFlexGroup
        alignItems="baseline"
        component="div"
        direction="row"
        gutterSize="m"
        justifyContent="flexStart"
        responsive={false}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiTitle
            size="m"
            textTransform="none"
          >
            <h1>
              Create new filter list
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <p>
              0
               
              items
               in total
            </p>
          </EuiTextColor>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    describedByIds={Array []}
    error={
      Array [
        "Use lowercase alphanumerics (a-z and 0-9), hyphens or underscores; must start and end with an alphanumeric character",
      ]
    }
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={true}
    label="Filter list ID"
  >
    <EuiFieldText
      compressed={false}
      fullWidth={false}
      isInvalid={true}
      isLoading={false}
      name="new_filter_id"
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="s"
    justifyContent="flexStart"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <EuiTextColor
          color="subdued"
          component="span"
        >
          Add a description
        </EuiTextColor>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EditDescriptionPopover
        canCreateFilter={true}
        updateDescription={[MockFunction]}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
</React.Fragment>
`;

exports[`EditFilterListHeader renders the header when editing an existing unused filter list with no description or items 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiFlexGroup
        alignItems="baseline"
        component="div"
        direction="row"
        gutterSize="m"
        justifyContent="flexStart"
        responsive={false}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiTitle
            size="m"
            textTransform="none"
          >
            <h1>
              Filter list test_filter_list
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <p>
              0
               
              items
               in total
            </p>
          </EuiTextColor>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="s"
    justifyContent="flexStart"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <EuiTextColor
          color="subdued"
          component="span"
        >
          Add a description
        </EuiTextColor>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EditDescriptionPopover
        canCreateFilter={true}
        updateDescription={[MockFunction]}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <React.Fragment>
    <EuiText
      grow={true}
      size="m"
    >
      <p>
        This filter list is not used by any jobs.
      </p>
    </EuiText>
    <EuiSpacer
      size="s"
    />
  </React.Fragment>
</React.Fragment>
`;

exports[`EditFilterListHeader renders the header when editing an existing used filter list with description and items set 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiFlexGroup
        alignItems="baseline"
        component="div"
        direction="row"
        gutterSize="m"
        justifyContent="flexStart"
        responsive={false}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiTitle
            size="m"
            textTransform="none"
          >
            <h1>
              Filter list test_filter_list
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <p>
              15
               
              items
               in total
            </p>
          </EuiTextColor>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="baseline"
    component="div"
    direction="row"
    gutterSize="s"
    justifyContent="flexStart"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <p>
          A test filter list
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EditDescriptionPopover
        canCreateFilter={true}
        description="A test filter list"
        updateDescription={[MockFunction]}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <React.Fragment>
    <div
      className="ml-filter-list-usage"
    >
      <EuiText
        grow={true}
        size="m"
      >
        This filter list is used in
      </EuiText>
      <FilterListUsagePopover
        entityType="detector"
        entityValues={
          Array [
            "mean CPUUtilization",
          ]
        }
      />
      <EuiText
        grow={true}
        size="m"
      >
        across
      </EuiText>
      <FilterListUsagePopover
        entityType="job"
        entityValues={
          Array [
            "cloudwatch",
          ]
        }
      />
    </div>
    <EuiSpacer
      size="s"
    />
  </React.Fragment>
</React.Fragment>
`;
